# MixGRPO

./: .gitignore  License.txt  README.md  env_setup.sh  pyproject.toml  requirements-lint.txt
HPSv2/hpsv2/: utils.py
HPSv2/hpsv2/src/open_clip/: factory.py
data/: prompts_test.txt
data/hosts/: hostfile
fastvideo/: score.py  train_grpo_flux.py
fastvideo/data_preprocess/: preprocess_flux_embedding.py
fastvideo/dataset/: __init__.py  latent_datasets.py  latent_flux_rl_datasets.py  latent_rl_datasets.py  t2v_datasets.py  transform.py
fastvideo/distill/: discriminator.py  solver.py
fastvideo/eval/: eval_reward.py
fastvideo/models/: flash_attn_no_pad.py
fastvideo/models/flux_hf/: pipeline_flux.py
fastvideo/models/hunyuan/: constants.py  idle_config.py  inference.py  prompt_rewrite.py
fastvideo/models/hunyuan_hf/: modeling_hunyuan.py  pipeline_hunyuan.py
fastvideo/models/mochi_hf/: convert_diffusers_to_mochi.py  mochi_latents_utils.py  modeling_mochi.py  norm.py  pipeline_mochi.py
fastvideo/models/reward_model/: clip_score.py  hps_score.py  image_reward.py  pick_score.py  unified_reward.py  utils.py
fastvideo/sample/: sample_flux.py  t_sne_get_embedding.py
fastvideo/utils/: checkpoint.py  communications.py  communications_flux.py  dataset_utils.py  env_utils.py  fsdp_util.py  grpo_states.py  load.py  logging_.py  optimizer.py  parallel_states.py  sampling_utils.py  scheduling_dpmsolver_multistep.py  validation.py
scripts/evaluate/: eval_reward.sh
scripts/finetune/: finetune_flux_grpo_FastGRPO.sh  finetune_flux_grpo_MixGRPO.sh  finetune_flux_grpo_MixGRPO_Flash*.sh  finetune_flux_grpo_MixGRPO_Flash.sh
scripts/huggingface/: download_hf.py  upload_hf.py
scripts/inference/: inference_flux.sh
scripts/preprocess/: preprocess_flux_rl_embeddings.sh  set_env_multinode.sh
(+23 files in other folders)
